# keystone

./: .gitignore  Cargo.toml  README.md  llms.txt
.github/workflows/: release.yml
docs/: ARTICLE.md  CLI_GUIDE.md  VISION.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/enclave/: error.rs  mod.rs  provider.rs
src/gateway/: caller.rs  mod.rs  protocol.rs  uds.rs
src/intelligence/: embeddings.rs
src/mcp/: mod.rs  server.rs
src/store/: db.rs  error.rs  mod.rs  models.rs  repository.rs
